<resources>
    <string name="app_name">페스타고</string>

    <!-- Strings related to home -->
    <string name="home_bottom_nav_festival">축제 목록</string>
    <string name="home_bottom_nav_ticket">티켓 목록</string>
    <string name="home_bottom_nav_search">검색</string>
    <string name="home_bottom_nav_bookmark">북마크</string>
    <string name="home_bottom_nav_my_page">마이페이지</string>
    <string name="home_back_pressed">한 번 더 누르면 앱이 종료됩니다</string>

    <!-- Strings related to festival list -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="festival_list_tv_popular_festival_title">요즘 뜨는 축제</string>
    <string name="festival_list_tv_date_range_format">%s - %s</string>
    <string name="festival_list_tv_date_format">yy.MM.dd</string>
    <string name="festival_list_iv_image">festival image</string>
    <string name="festival_list_ti_current_festival">진행 중</string>
    <string name="festival_list_ti_upcoming_festival">진행 예정</string>
    <string name="festival_list_tv_dday_end">종료</string>
    <string name="festival_list_tv_dday_in_progress">진행 중</string>
    <string name="festival_list_tv_dday_format">D%1$s</string>

    <string name="festival_list_tv_festivals_empty_progress">진행 중인 축제가 없어요</string>
    <string name="festival_list_tv_festivals_empty_upcoming">진행 예정인 축제가 없어요</string>
    <string name="festival_list_tv_festivals_empty">축제가 없어요</string>

    <!-- String related to artist detail -->
    <string name="artist_detail_tv_dday_format">D%1$s</string>
    <string name="artist_detail_tv_empty_festivals">아직 축제가 없어요</string>
    <string name="artist_detail_bookmark_success">아티스트를 북마크 했습니다</string>
    <string name="artist_detail_bookmark_cancel">북마크를 취소했습니다</string>

    <!-- String related to notification list-->
    <string name="notification_list_tv_notification_app_bar">알림</string>
    <string name="notification_list_tv_no_notification">아직 도착한 알림이 없어요</string>
    <string name="notification_list_tv_no_notification_explain">새로운 소식이 도착하면 알려드릴게요</string>

    <!-- String related to festival detail -->
    <string name="festival_detail_tv_empty_stages">아직 라인업이 공개되지 않았어요</string>
    <string name="festival_detail_bookmark_success">축제를 북마크 했습니다</string>
    <string name="festival_detail_bookmark_cancel">북마크를 취소했습니다</string>

    <!-- String related to festival dday -->
    <string name="tv_dday_in_progress">진행 중</string>
    <string name="tv_dday_format">D%1$s</string>
    <string name="tv_dday_end">종료</string>

    <!-- String related to region bottom sheet -->
    <string name="region_bottom_sheet_tv_region">지역별</string>

    <!-- String related to school detail -->
    <string name="school_detail_tv_empty_festivals">아직 축제가 없어요</string>
    <string name="school_detail_bookmark_success">학교를 북마크 했습니다</string>
    <string name="school_detail_bookmark_cancel">북마크를 취소했습니다</string>

    <!-- String related to search -->
    <string name="search_et_search_hint">학교명, 아티스트명, 축제명으로 입력하세요.</string>
    <string name="search_tv_recent_search">최근 검색어</string>
    <string name="search_tv_delete_all">전체 삭제</string>
    <string name="search_tv_recent_search_empty">최근 검색 내역이 없어요</string>
    <string name="search_tl_tab_festival">축제</string>
    <string name="search_tl_tab_Artist">아티스트</string>
    <string name="search_tl_tab_school">학교</string>
    <string name="search_cant_search_blank">검색어를 입력해주세요</string>
    <string name="search_school_tv_dday_in_progress">축제 중</string>
    <string name="search_school_tv_dday_format">D%1$s</string>
    <string name="search_school_tv_no_plan">예정 없음</string>
    <string name="search_artist_tv_today_stage_count">오늘 공연 %d개</string>
    <string name="search_artist_tv_upcoming_stage_count">공연 예정 %d개</string>
    <string name="search_artist_tv_no_plan">예정 없음</string>
    <string name="search_tv_no_result">앗! 검색 결과가 없네요</string>
    <string name="search_tv_no_result_guide">찾으시는 정보가 없다면 저희에게 알려주세요</string>
    <string name="search_tv_request_add">추가 요청하러 가기</string>

    <!-- String related to splash -->
    <string name="splash_app_update_request_dialog_title">업데이트 알림</string>
    <string name="splash_app_update_request_dialog_message">새로운 페스타고를 사용하기 위해 업데이트 해주세요!</string>
    <string name="splash_app_update_denied">업데이트 후 정상 사용가능합니다.</string>
    <string name="splash_app_default_error_message">인터넷 연결 및 최신 버전을 확인해주세요</string>

    <!-- Strings related to ok dialog -->
    <string name="ok_dialog_btn_ok">확인</string>
    <string name="ok_dialog_btn_update">업데이트</string>
    <string name="ok_dialog_btn_cancel">취소</string>

    <!-- Strings related to network error -->
    <string name="layout_network_error_refresh">새로고침하기</string>
    <string name="layout_network_error_retry">잠시 후에 다시 시도해주세요</string>
    <string name="layout_network_error_not_work">현재 접속이 원활하지 않아요</string>

    <!-- Strings related to require login -->
    <string name="layout_require_login_description">로그인하면 북마크 할 수 있어요</string>
    <string name="layout_require_login_go_to_login">로그인 하러 가기</string>

    <!-- Strings related to bookmark -->
    <string name="bookmark_list_tv_artist_bookmark">관심있는 아티스트를 북마크 할 수 있어요</string>
    <string name="bookmark_list_tv_festival_bookmark">관심있는 축제를 북마크 할 수 있어요</string>
    <string name="bookmark_list_tv_school_bookmark">관심있는 학교를 북마크 할 수 있어요</string>
    <string name="bookmark_list_tv_festival">축제</string>
    <string name="bookmark_list_tv_artist">아티스트</string>
    <string name="bookmark_list_tv_school">학교</string>

    <!-- String related to signIn -->
    <string name="sign_in_tv_festago_flag">페스타고,\n대학축제를\n더욱 즐겁게!</string>
    <string name="sign_in_tv_kakao_login">카카오로 로그인하기</string>
    <string name="sign_in_tv_without_login">로그인하지 않고 둘러보기</string>
    <string name="sign_in_default_error_message">로그인 할 수 없습니다. 다시 로그인 하거나 앱을 재실행 해주세요.</string>
    <string name="sign_in_success">로그인에 성공했습니다</string>


    <!-- Strings related to my page -->
    <string name="my_page_go_to_login">로그인 하러 가기</string>
    <string name="my_page_contact_us">문의하기</string>
    <string name="my_page_faq">FAQ</string>
    <string name="my_page_personal_info_policy">개인정보 처리방침</string>
    <string name="my_page_app_version">앱버전</string>
    <string name="my_page_logout">로그아웃</string>
    <string name="my_page_unregister">회원탈퇴</string>
    <string name="my_page_logout_alert_title">로그아웃</string>
    <string name="my_page_logout_alert_message">정말 로그아웃 하시겠습니까?</string>
    <string name="my_page_delete_account_alert_title">회원 탈퇴</string>
    <string name="my_page_delete_account_alert_message">정말 탈퇴 하시겠습니까? 다시 되돌릴 수 없습니다.</string>
    <string name="my_page_app_version_format">버전 : %s</string>

    <!-- Strings related festival item -->
    <string name="all_tv_empty_stage">아직 라인업이\n공개되지 않았어요</string>

</resources>
