<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_festival"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_nav_home"
        android:iconTint="@color/black"
        android:title="@string/home_bottom_nav_festival" />
    <item
        android:id="@+id/item_ticket"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_nav_ticket"
        android:iconTint="@color/black"
        android:title="@string/home_bottom_nav_ticket" />

    <item
        android:id="@+id/item_bookmark"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_nav_bookmark"
        android:iconTint="@color/black"
        android:title="@string/home_bottom_nav_bookmark" />

    <item
        android:id="@+id/item_my_page"
        android:enabled="true"
        android:icon="@drawable/ic_bottom_nav_my_page"
        android:iconTint="@color/black"
        android:title="@string/home_bottom_nav_my_page" />
</menu>
