<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.signin.SignInActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_sign_in"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/tvFestagoFlag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="114dp"
            android:fontFamily="@font/pretendard_bold"
            android:lineSpacingExtra="12dp"
            android:text="@string/sign_in_tv_festago_flag"
            android:textColor="@color/background_gray_01"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpUsage" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnKakaoLogin"
            style="@style/B1Medium16Lh20"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_kakao_sign_in"
            android:drawableStart="@drawable/ic_kakao_logo"
            android:gravity="center"
            android:paddingHorizontal="24dp"
            android:text="@string/sign_in_tv_kakao_login"
            android:textColor="@color/contents_gray_07"
            app:layout_constraintBottom_toTopOf="@+id/tvWithoutLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvWithoutLogin"
            style="@style/B2Medium14Lh20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:text="@string/sign_in_tv_without_login"
            android:textColor="@color/background_gray_03"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
