<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.notificationlist.NotificationListActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clAppBar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@null"
                android:src="@drawable/ic_back_gray_07"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/contents_gray_07" />

            <TextView
                style="@style/H4Bold16Lh20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_list_tv_notification_app_bar"
                android:textColor="@color/contents_gray_07"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvNoNotification"
            style="@style/H5Bold14Lh16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_list_tv_no_notification"
            android:textColor="@color/contents_gray_06"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clAppBar" />

        <TextView
            android:id="@+id/tvNoNotificationExplain"
            style="@style/B4Medium12Lh14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_list_tv_no_notification_explain"
            android:textColor="@color/contents_gray_05"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNoNotification" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
