<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="refreshListener"
            type="kotlin.jvm.functions.Function0" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_loading" />

            <TextView
                android:id="@+id/tvNetworkError"
                style="@style/H5Bold14Lh16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:text="@string/layout_network_error_not_work"
                android:textColor="@color/contents_gray_06"
                android:textSize="20sp" />

            <TextView
                style="@style/H4Bold16Lh20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/layout_network_error_retry"
                android:textColor="@color/contents_gray_05" />

            <LinearLayout
                onSingleClick="@{()->refreshListener.invoke()}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_btn_refresh"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp">

                <TextView
                    style="@style/H5Bold14Lh16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/layout_network_error_refresh"
                    android:textColor="@color/primary_blue_07" />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:src="@drawable/ic_refresh" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
